# TraceStudio

./: README.md
src/: CMakeLists.txt  compile_commands.json  main.cpp
src/engine/: a.out  engine.cpp  engine.h  file_reader.cpp  file_reader.h
src/engine/model/: trace_parser.cpp  trace_parser.h
src/gui/: AppState.h  config.def.h  gui_init.cpp  gui_init.h  init.cpp  init.h  tinyfiledialogs.c  tinyfiledialogs.h  work.cpp  work.h
src/io/: file_reader.cpp  file_reader.h
src/parser/: trace_parser.cpp
